# exactdiag-project

./: .gitattributes  CMakeLists.txt  README.md  TODO.md  construct_matrix.cpp  construct_matrix.h  lattice.cpp  lattice.h  model.cpp  model.h  op.cpp  op.h  playground.cpp  pyED.cpp  python_test.ipynb  test.py  util.cpp  util.h
